<?xml version="1.0"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GeoAddress</string>
    <string name="are_you_sure_want_to_logout">Are you sure \n you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="continue_text">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_lat">Please enter Latitude</string>
    <string name="please_enter_valid_lat">Please enter valid latitude</string>
    <string name="please_enter_lng">Please enter longitude</string>
    <string name="please_enter_valid_lng">Please enter valid longitude</string>
    <string name="pick_plot_location">Pick plot location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="reset">Reset</string>
    <string name="save_location">Save Location</string>
    <string name="enter_latlng">Enter Plot Lat/Lng</string>
    <string name="allow">ALLOW</string>
    <string name="save_next">Save &amp; Next</string>
    <string name="please_allow_app_to_access_your_device_location">Please “Allow” app to access your device location</string>
    <string name="this_permission_is_required">This permission is required to provide you timely the Weather based Crop Advisory for your plot.</string>
    <string name="locate_plot">Locate Plot</string>
    <string name="location_required_msg">Location access is \nneeded for the app to \nfunction properly!</string>
    <string name="exit_anyway">Exit anyway</string>
    <string name="image_description">Image Description</string>
    <string name="add">add</string>
    <string name="not_valid_lat_lng">Not a valid latitude &amp; longitude</string>
    <string name="un_known">Unknown</string>
    <string name="request_permission_compulsory">This app may not work correctly without the requested permissions.</string>
    <string name="compulsory">Compulsory</string>
    <string name="latitude_longitude">Latitude, Longitude</string>
    <string name="get_geo_location">Get Geo Location</string>
    <string name="get_address">Get Geo Address</string>
    <string name="no_lat_long_err">Please get valid latitude and longitude values and check type of data required</string>
</resources>