<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:id="@+id/rl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/dp28"
                android:layout_height="@dimen/dp28"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp14"
                android:layout_marginBottom="@dimen/dp14"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_back"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp14"
                android:gravity="center_horizontal"
                android:text="@string/get_geo_location"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_plot_lat_lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_toolbar"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="7dp"
            android:layout_marginRight="@dimen/dp16">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_et_plot_lat_lng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_plot_lat_lng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/latitude_longitude"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_add_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp5"
                android:text="@string/add"
                android:textColor="@color/colorOrange"
                android:textSize="@dimen/sp14"
                android:translationZ="@dimen/dp10"
                app:textAllCaps="true"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/rb_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_plot_lat_lng"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp8"
                android:text="Places API"
                android:textColor="@color/black1" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp8"
                android:text="Geo Coder"
                android:textColor="@color/black1" />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp8"
                android:text="Map API"
                android:textColor="@color/black1" />
        </RadioGroup>

        <Button
            android:id="@+id/tv_get_reverse_geo_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rb_types"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dp20"
            android:background="@color/colorBlue"
            android:text="@string/get_address"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp14"
            app:textAllCaps="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_get_reverse_geo_location"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginRight="@dimen/dp16">

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorBlack1"
                android:textSize="@dimen/sp14"
                app:textAllCaps="true" />
        </ScrollView>

        <ProgressBar
            android:id="@+id/pb_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</layout>