<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp40"
        android:layout_marginRight="@dimen/dp40"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/dp27"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text=""
                android:textStyle="bold"
                android:textColor="@color/colorBlack0"
                android:textSize="@dimen/sp17"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/dp27"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/are_you_sure_want_to_logout"
                android:textColor="@color/colorBlack0"
                android:textSize="@dimen/sp17"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp27"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_no"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorLightOrange"
                    android:gravity="center"
                    android:padding="@dimen/dp16"
                    android:text="@string/exit_anyway"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp12"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_yes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorOrange"
                    android:gravity="center"
                    android:padding="@dimen/dp16"
                    android:text="@string/yes"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp12"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>