<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:translationZ="@dimen/dp14">

            <RelativeLayout
                android:id="@+id/rl_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/locate_plot"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dp20"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_back" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_lat_lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tb"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_marginBottom="@dimen/dp16"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/dp8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp14"
                android:layout_marginTop="@dimen/dp6"
                android:layout_marginRight="@dimen/dp14"
                android:layout_marginBottom="@dimen/dp6"
                android:orientation="horizontal"
                android:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_lat"
                        android:layout_width="@dimen/dp24"
                        android:layout_height="@dimen/dp24"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_location_lat_lng" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_lat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp5"
                        android:layout_toRightOf="@+id/iv_lat">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_plot_lat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="-.0123456789"
                            android:hint="@string/latitude"
                            android:inputType="numberDecimal"
                            android:maxLength="30"
                            android:textSize="15dp"
                            android:textStyle="italic" />
                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_lng"
                        android:layout_width="@dimen/dp24"
                        android:layout_height="@dimen/dp24"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_location_lat_lng" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_lng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp5"
                        android:layout_marginRight="@dimen/dp5"
                        android:layout_toRightOf="@+id/iv_lng">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_plot_lng"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="-.0123456789"
                            android:hint="@string/longitude"
                            android:inputType="numberDecimal"
                            android:maxLength="30"
                            android:textSize="15dp"
                            android:textStyle="italic" />
                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

                <ImageView
                    android:id="@+id/iv_edit_latlng"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:padding="@dimen/dp8"
                    android:src="@drawable/ic_edit_pencil" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/dp56"
            android:layout_height="57dp"
            android:layout_below="@+id/cv_lat_lng"
            android:layout_margin="@dimen/dp16"
            android:translationZ="@dimen/dp15"
            app:cardCornerRadius="@dimen/dp8">

            <ImageView
                android:id="@+id/iv_map_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/map_normal" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_placeholder"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_location_icon" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_save_location_disable1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_margin="@dimen/dp20"
            app:cardBackgroundColor="@color/colorLightGray"
            app:cardCornerRadius="17dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/tv_save_location_disable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp40"
                android:layout_marginRight="@dimen/dp40"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="@dimen/dp10"
                android:text="@string/save_location"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp14"
                android:textStyle="bold"
                android:visibility="visible" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_save_location_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp20"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="17dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/tv_save_location_enable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp40"
                android:layout_marginRight="@dimen/dp40"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="@dimen/dp10"
                android:text="@string/save_location"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp14"
                android:textStyle="bold"
                android:visibility="visible" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</layout>